# dune-localfunctions

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  COPYING  INSTALL  LICENSE.md  Makefile.am  README.md  config.h.cmake  configure.ac  dune-localfunctions-config.cmake.in  dune-localfunctions.pc.in  dune.module  package.py  pyproject.toml  setup.py  stamp-vc
debug/: .gitignore  Makefile.am  dune-localfunctions2vtu.cc  localfunctions2vtu.hh  localfunctions2vtu.make  make-functions2vtu.pl
doc/: .gitignore  CMakeLists.txt  Makefile.am  Makefile.dist.am  agenda.txt  dune-localfunctions-manual.tex
doc/doxygen/: .gitignore  Doxyfile.in  Doxylocal  Makefile.am  doxy-header.wml  dune-doxy.css  mainpage  mainpage.txt  modules.txt
doc/layout/: Makefile.am  default.wml  header.wml
dune/finiteelements/: Makefile.am  dune_treffen_061008.txt  edger02d.hh  edger12d.hh  edges03d.hh  edges12d.hh  hierarchicalp2.hh  hierarchicalp2withelementbubble.hh  monom.hh  p0.hh  p1.hh  p11d.hh  p12d.hh  p13d.hh  p2.hh  p23d.hh  pk.hh  pk2d.hh  pk3d.hh  prismp1.hh  prismp2.hh  q1.hh  q12d.hh  q13d.hh  q22d.hh  rannacher_turek2d.hh  refinedp0.hh  refinedp1.hh  rt02d.hh  rt0q.hh
dune/finiteelements/common/: Makefile.am  basis.hh  finiteelement.hh  interpolation.hh  localbasis.hh  localcoefficients.hh  localfiniteelement.hh  localinterpolation.hh  simplebasis.hh  simpleinterpolation.hh  virtualinterface.hh
dune/finiteelements/edger02d/: Makefile.am  edger02dlocalbasis.hh  edger02dlocalcoefficients.hh  edger02dlocalinterpolation.hh
dune/finiteelements/edger12d/: Makefile.am  edger12dlocalbasis.hh  edger12dlocalcoefficients.hh  edger12dlocalinterpolation.hh
dune/finiteelements/edges02d/: .gitignore  Makefile.am  edges02d_basis.tex  edges02dlocalbasis.hh  edges02dlocalcoefficients.hh  edges02dlocalinterpolation.hh
dune/finiteelements/edges03d/: Makefile.am  edges03d_basis.tex  edges03dlocalbasis.hh  edges03dlocalcoefficients.hh  edges03dlocalinterpolation.hh
dune/finiteelements/edges12d/: Makefile.am  edges12dlocalbasis.hh  edges12dlocalcoefficients.hh  edges12dlocalinterpolation.hh
dune/finiteelements/generic/: .gitignore  Makefile.am  dglagrangefiniteelement.hh  lagrangefiniteelement.hh  orthonormalfiniteelement.hh  raviartthomasfiniteelement.hh
dune/finiteelements/hierarchicalp2/: Makefile.am  hierarchicalsimplexp2localbasis.hh  hierarchicalsimplexp2localinterpolation.hh
dune/finiteelements/hierarchicalp2withelementbubble/: hierarchicalsimplexp2withelementbubble.hh
dune/finiteelements/hierarchicalprismp2/: Makefile.am  hierarchicalprismp2localbasis.hh
dune/finiteelements/localbasis/: p0localbasis.hh  p12dlocalbasis.hh  pk2dlocalbasis.hh  q12dlocalbasis.hh  q22dlocalbasis.hh  rt0trianglelocalbasis.hh
dune/finiteelements/localcoefficients/: p0localcoefficients.hh  p12dlocalcoefficients.hh  pk2dlocalcoefficients.hh  q12dlocalcoefficients.hh  q22dlocalcoefficients.hh  rt0localcoefficients.hh
dune/finiteelements/mimetic/: Makefile  Makefile.am  Makefile.in  mimeticall.hh
dune/finiteelements/monom/: Makefile.am  monomlocalbasis.hh  monomlocalcoefficients.hh  monomlocalinterpolation.hh
dune/finiteelements/p0/: Makefile.am  p0localbasis.hh  p0localcoefficients.hh  p0localinterpolation.hh
dune/finiteelements/p1/: Makefile.am  p1localbasis.hh  p1localinterpolation.hh
dune/finiteelements/p11d/: Makefile.am  p11dlocalbasis.hh  p11dlocalcoefficients.hh  p11dlocalinterpolation.hh
dune/finiteelements/p12d/: Makefile.am  p12dlocalbasis.hh  p12dlocalcoefficients.hh  p12dlocalinterpolation.hh
dune/finiteelements/p13d/: Makefile.am  p13dlocalbasis.hh  p13dlocalcoefficients.hh  p13dlocalinterpolation.hh
dune/finiteelements/p23d/: Makefile.am  p23dlocalbasis.hh  p23dlocalcoefficients.hh  p23dlocalinterpolation.hh
dune/finiteelements/pk2d/: Makefile.am  pk2dlocalbasis.hh  pk2dlocalcoefficients.hh  pk2dlocalinterpolation.hh
dune/finiteelements/pk3d/: Makefile.am  pk3dlocalbasis.hh  pk3dlocalcoefficients.hh  pk3dlocalinterpolation.hh
dune/finiteelements/prismp1/: Makefile.am  prismp1localbasis.hh  prismp1localinterpolation.hh
dune/finiteelements/prismp2/: Makefile.am  prismp2localbasis.hh  prismp2localcoefficients.hh  prismp2localinterpolation.hh
dune/finiteelements/q1/: Makefile.am  q1localcoefficients.hh  q1localinterpolation.hh
dune/finiteelements/q12d/: Makefile.am  q12dlocalbasis.hh  q12dlocalcoefficients.hh  q12dlocalinterpolation.hh
dune/finiteelements/q13d/: Makefile.am  q13dlocalbasis.hh  q13dlocalcoefficients.hh  q13dlocalinterpolation.hh
dune/finiteelements/q22d/: Makefile.am  q22dlocalbasis.hh  q22dlocalcoefficients.hh  q22dlocalinterpolation.hh
dune/finiteelements/rannacher_turek2d/: Makefile.am  rannacher_turek2dlocalbasis.hh  rannacher_turek2dlocalcoefficients.hh  rannacher_turek2dlocalinterpolation.hh
dune/finiteelements/refinedp0/: Makefile.am  refinedp0localcoefficients.hh  refinedp0localinterpolation.hh
dune/finiteelements/refinedp1/: Makefile.am  refinedp1localbasis.hh
dune/finiteelements/rt02d/: Makefile.am  rt02dlocalbasis.hh  rt02dlocalcoefficients.hh  rt02dlocalinterpolation.hh
dune/finiteelements/rt0q2d/: Makefile.am  rt0q2dall.hh
dune/finiteelements/rt0q3d/: Makefile.am  rt0q3dall.hh
dune/finiteelements/test/: .gitignore  Makefile.am  edges02dshapefunctiontest.cc  edges12dshapefunctiontest.cc  lagrangeshapefunctiontest.cc  monomshapefunctiontest.cc  refinedp1test.cc  test-edges03dinterpolate.cc  testfem.cc  tetrahedron.dgf  triangle.dgf  (+1 more)
dune/localfunctions/: CMakeLists.txt  Makefile.am  brezzidouglasmarini.hh  crouzeixraviart.hh  dualmortarbasis.hh  edger02d.hh  edges02d.hh  edges03d.hh  enriched.hh  enrichted.hh  hierarchical.hh  hierarchicalp2.hh  hierarchicalp2withelementbubble.hh  hierarchicalprismp2.hh  lagrange.hh  mimetic.hh  monom.hh  monomial.hh  nedelec.hh  orthonormal.hh  p0.hh  p1.hh  p2.hh  p23d.hh  pk.hh  pk2d.hh  pk3d.hh  pq22d.hh  prismp1.hh  prismp2.hh  q1.hh  q22d.hh  rannacher_turek2d.hh  rannacherturek.hh  raviartthomas.hh  refined.hh  refinedp0.hh  refinedp1.hh  rt02d.hh  rt0q.hh  (+2 more)
(+804 files in other folders)
