finiteelementsdir = $(includedir)/dune/finiteelements

finiteelements_HAEDERS = edger02d.hh edges02d.hh edges03d.hh \
        p0.hh p11d.hh p12d.hh p13d.hh p1.hh pk2d.hh pk3d.hh q12d.hh q13d.hh q22d.hh \
	rannacher_turek2d.hh rt02d.hh \
        refinedp1.hh monom.hh p2.hh mimetic.hh rt0q2d.hh rt0q3d.hh

SUBDIRS = common test p0 p11d p12d p13d pk2d pk3d q12d q13d q22d rt02d edger02d edges02d \
	edges03d rannacher_turek2d refinedp1 monom mimetic rt0q2d rt0q3d

include $(top_srcdir)/am/global-rules
