finiteelementsdir = $(includedir)/dune/finiteelements

finiteelements_HEADERS = edger02d.hh edges02d.hh edges03d.hh \
        p0.hh p1.hh pk2d.hh pk3d.hh q22d.hh prismp1.hh prismp2.hh \
	rannacher_turek2d.hh rt02d.hh hierarchicalprismp2.hh \
        refinedp1.hh monom.hh p2.hh mimetic.hh rt0q2d.hh rt0q3d.hh rt0q.hh \
	pk2d.hh q22d.hh q1.hh \
	pq22d.hh

SUBDIRS = common generic test \
          p0 p1 pk2d pk3d q1 q22d rt02d edger02d edges02d \
 	  edges03d rannacher_turek2d refinedp1 monom mimetic rt0q2d rt0q3d \
          prismp1 prismp2 hierarchicalprismp2

include $(top_srcdir)/am/global-rules
