localfunctionsdir = $(includedir)/dune/localfunctions

localfunctions_HEADERS =			\
	lagrange.hh				\
	mimetic.hh				\
	monom.hh				\
	orthonormal.hh				\
	rannacherturek.hh			\
	raviartthomas.hh			\
	refined.hh

SUBDIRS =					\
	brezzidouglasmarini			\
	common					\
	hierarchical				\
	lagrange				\
	meta					\
	mimetic					\
	monom					\
	orthonormal				\
	rannacherturek				\
	raviartthomas				\
	refined					\
	test					\
	utility					\
	whitney

include $(top_srcdir)/am/global-rules
