localfunctionsdir = $(includedir)/dune/localfunctions

localfunctions_HEADERS =			\
	dualmortarbasis.hh			\
	lagrange.hh				\
	mimetic.hh				\                            \
        monomial.hh                             \
	orthonormal.hh				\
	rannacherturek.hh			\
	raviartthomas.hh			\
	refined.hh

SUBDIRS =					\
	brezzidouglasmarini			\
	common					\
	dualmortarbasis				\
	hierarchical				\
	lagrange				\
	meta					\
	mimetic					\
        monomial                                \
	orthonormal				\
	rannacherturek				\
	raviartthomas				\
	refined					\
	test					\
	utility					\
	whitney

include $(top_srcdir)/am/global-rules

EXTRA_DIST = CMakeLists.txt
