commondir = $(includedir)/dune/finiteelements/common
common_HEADERS =				\
	basis.hh				\
	finiteelement.hh			\
	interpolation.hh			\
	localbasis.hh				\
	localcoefficients.hh			\
	localfiniteelement.hh			\
	localinterpolation.hh			\
	simplebasis.hh				\
	simpleinterpolation.hh

include $(top_srcdir)/am/global-rules
