brezzidouglasmarinidir = $(includedir)/dune/localfunctions/brezzidouglasmarini

brezzidouglasmarini_HEADERS = \
	brezzidouglasmarini1cube2d.hh \
	brezzidouglasmarini1q2d.hh \
	brezzidouglasmarini1simplex2d.hh \
	brezzidouglasmarini12d.hh

SUBDIRS = \
	brezzidouglasmarini1cube2d \
	brezzidouglasmarini1simplex2d

include $(top_srcdir)/am/global-rules
