brezzidouglasmarinidir = $(includedir)/dune/localfunctions/brezzidouglasmarini

brezzidouglasmarini_HEADERS = \
	brezzidouglasmarini1cube2d.hh \
	brezzidouglasmarini1q2d.hh \
	brezzidouglasmarini1cube3d.hh \
	brezzidouglasmarini2cube2d.hh \
	brezzidouglasmarini1simplex2d.hh \
	brezzidouglasmarini12d.hh \
	brezzidouglasmarini2simplex2d.hh

SUBDIRS = \
	brezzidouglasmarini1cube2d \
	brezzidouglasmarini1cube3d \
	brezzidouglasmarini2cube2d \
	brezzidouglasmarini1simplex2d \
	brezzidouglasmarini2simplex2d

include $(top_srcdir)/am/global-rules

EXTRA_DIST = CMakeLists.txt
