install(FILES
  concepts.hh
  interface.hh
  interfaceswitch.hh
  localbasis.hh
  localkey.hh
  localfiniteelementtraits.hh
  localtoglobaladaptors.hh
  partial.hh
  staticforloop.hh
  staticIf.hh
  virtualinterface.hh
  virtualwrappers.hh
  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/dune/localfunctions/common)
