install(FILES
  concepts.hh
  interface.hh
  interfaceswitch.hh
  localbasis.hh
  localkey.hh
  localfiniteelementtraits.hh
  localtoglobaladaptors.hh
  partial.hh
  staticIf.hh
  staticLoops.hh
  virtualinterface.hh
  virtualwrappers.hh
  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/dune/localfunctions/common)
