commondir = $(includedir)/dune/localfunctions/common
common_HEADERS =				\
	basis.hh				\
	finiteelement.hh			\
	interpolation.hh			\
	localbasis.hh				\
	localcoefficients.hh			\
	localfiniteelement.hh			\
	simplebasis.hh				\
	simpleinterpolation.hh                  \
	virtualinterface.hh

include $(top_srcdir)/am/global-rules
