commondir = $(includedir)/dune/localfunctions/common
common_HEADERS =				\
	interface.hh				\
	interfaceswitch.hh			\
	localbasis.hh				\
	localkey.hh      			\
	localfiniteelementtraits.hh		\
	localtoglobaladaptors.hh		\
	virtualinterface.hh 	\
	virtualwrappers.hh

include $(top_srcdir)/am/global-rules

EXTRA_DIST = CMakeLists.txt
