genericdir = $(includedir)/dune/localfunctions/generic
generic_HEADERS = lagrangefiniteelement.hh \
                  dglagrangefiniteelement.hh \
                  orthonormalfiniteelement.hh \
                  raviartthomasfiniteelement.hh
SUBDIRS = common orthonormalbasis lagrangebasis raviartthomasbasis math quadrature
AM_CPPFLAGS = $(DUNE_CPPFLAGS)

include $(top_srcdir)/am/global-rules
